# Socketify

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmarks/: README.md  pulse_hub_results.csv  pulse_results.csv  pulse_results.json  render_charts.py  results.json  run_all.sh  run_load.py  run_pulse.sh  run_pulse_load.py
benchmarks/servers/: django_ping.py  express_ping.js  flask_ping.py  pulse_hub_fanout  pulse_hub_fanout.cpp  socketify_ping.cpp  socketify_pulse  socketify_pulse.cpp  ws_node_echo.js  ws_python_echo.py
cmake/: SocketifyWarnings.cmake  socketifyConfig.cmake.in
docs/: API.md  Doxyfile  PULSE_UPGRADE_PLAN.md  README.md  VERSIONING.md  mainpage.md
docs/doxygen/: custom.css  header.html
example/: CMakeLists.txt  main-test.cpp  main.cpp
examples/: CMakeLists.txt
examples/01_hello_world/: CMakeLists.txt  main.cpp
examples/02_rest_api/: CMakeLists.txt  main.cpp
examples/03_middleware/: CMakeLists.txt  main.cpp
examples/04_static_site/: CMakeLists.txt  main.cpp
examples/04_static_site/public/: app.css  app.js  index.html
examples/05_sse_chat/: CMakeLists.txt  main.cpp
examples/06_https/: CMakeLists.txt  gen_cert.sh  main.cpp
examples/07_fullstack/: CMakeLists.txt  main.cpp
examples/07_fullstack/public/: index.html
examples/08_nexus_board/: CMakeLists.txt  README.md
examples/08_nexus_board/backend/: db.cpp  db.h  main.cpp
examples/08_nexus_board/frontend/: index.html  package-lock.json  package.json  vite.config.js
examples/08_nexus_board/frontend/src/: App.jsx  api.js  auth.jsx  styles.css
examples/09_orm_demo/: CMakeLists.txt  main.cpp
examples/10_pulse_chat/: CMakeLists.txt  main.cpp
examples/11_pulse_media/: CMakeLists.txt  main.cpp
examples/DemoAll/: CMakeLists.txt  demo_all.cpp
examples/DemoAll/public/: app.js  index.html  style.css
examples/HelloWorld/: CMakeLists.txt  hello_world.cpp
header/: common.h  http.h  https.h  request.h  response.h  route.h  server.h
include/socketify/: body.h  cache.h  compression.h  config.h  cookies.h  cors.h  db.h  http.h  http_client.h  json.h  logging.h  middleware.h  pulse.h  pulse_easy.h  pulse_media.h  ratelimit.h  request.h  response.h  router.h  server.h  sessions.h  socketify.h  sse.h  static_files.h  tls.h  validate.h  version.h.in
include/socketify/db/: database.h  document.h  engine.h  error.h  migration.h  model.h  model_impl.h  pool.h  query.h  relation.h  schema.h  validation.h
include/socketify/detail/: buffer.h  file_io.h  http_parser.h  loop.h  pulse_impl.h  socket.h  sse_impl.h  utils.h
packaging/: SocketifyConfig.cmake.in  SocketifyConfigVersion.cmake.in
scripts/: build_debug.sh  build_release.sh  bump-version.sh  run_examples.sh  run_tests.sh  serve_docs.sh
src/: body.cpp  cache.cpp  common.cpp  compression.cpp  config.cpp  cookies.cpp  cors.cpp  http.cpp  http_client.cpp  https.cpp  json.cpp  logging.cpp  middleware.cpp  pulse.cpp  pulse_easy.cpp  pulse_media.cpp  ratelimit.cpp  request.cpp  response.cpp  route.cpp  router.cpp  server.cpp  sessions.cpp  sse.cpp  static_files.cpp  tls.cpp  validate.cpp
src/db/: database.cpp  migration.cpp  mongo_engine.cpp  mysql_engine.cpp  postgres_engine.cpp  query.cpp  record.cpp  schema.cpp  sqlite_engine.cpp
src/detail/: buffer.cpp  file_io_posix.cpp  http_parser_sm.cpp  loop_epoll.cpp  socket_posix.cpp  utils.cpp
tests/: CMakeLists.txt  http_router_tests.cpp  main.cpp
tests/integration/: http_client_integration_tests.cpp  pulse_easy_integration_tests.cpp  pulse_integration_tests.cpp  server_integration_tests.cpp  sse_integration_tests.cpp  test_client.h  tls_integration_tests.cpp
tests/unit/: body_tests.cpp  cache_tests.cpp  compression_tests.cpp  config_tests.cpp  cookies_tests.cpp  cors_tests.cpp  db_tests.cpp  http_parser_tests.cpp  json_tests.cpp  logging_tests.cpp  pulse_enhanced_tests.cpp  pulse_frame_tests.cpp  ratelimit_tests.cpp  response_tests.cpp  router_tests.cpp  sessions_tests.cpp  static_files_tests.cpp  utils_tests.cpp  validate_tests.cpp  version_tests.cpp
tools/socketify_cli/: CMakeLists.txt  main.cpp
